--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   ],
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
-    "vue": "^2.5.11"
+    "jquery": "^3.3.1",
+    "vue": "^2.5.11",
+    "vue-router": "^3.0.2"
   },
   "browserslist": [
     "> 1%",
